objects/Account_Task__c/Account_Task__c.object-meta.xml
<CustomObject>
    <description>Account Task object is owned by the Customer Org. Users include Customer Experience, Support Center and TAM Org.</description>
    <label>Account Task</label>
    <nameField>
        <displayFormat>AcctTask-{0000000}</displayFormat>
        <label>Account Task ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>