objects/Account_Task__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Tasks</relationshipLabel>
    <relationshipName>Account_Tasks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>