objects/Account_Task__c/fields/Account_Business_Objective_Created__c.field-meta.xml
<CustomField>
    <fullName>Account_Business_Objective_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SS-2211 - Customer Journey Account Task Onboard Type Validation.
Checked if Business Objective Found on the related Account
Uncheck if No Business Objective Found on the related Account</description>
    <label>Account Business Objective Created</label>
    <type>Checkbox</type>
</CustomField>