objects/Account_Task__c/fields/Account_Contact__c.field-meta.xml
<CustomField>
    <fullName>Account_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Search for your primary customer contact.</inlineHelpText>
    <label>Account Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Account Tasks</relationshipLabel>
    <relationshipName>Account_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>