objects/Account_Task__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Provide a description for the goal your customer wants to achieve.</inlineHelpText>
    <label>Goal Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>