objects/Account_Task__c/fields/Goal_Detail__c.field-meta.xml
<CustomField>
    <fullName>Goal_Detail__c</fullName>
    <inlineHelpText>Used for sub-bullets to support your Goal</inlineHelpText>
    <label>Goal Detail</label>
    <type>TextArea</type>
</CustomField>