objects/Account_Task__c/fields/Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Date__c</fullName>
    <inlineHelpText>Select the date the meeting was conducted.</inlineHelpText>
    <label>Meeting Date</label>
    <type>Date</type>
</CustomField>