objects/Account_Task__c/fields/Meeting_Type__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Type__c</fullName>
    <description>Please select the visit that most closely aligns with type of meeting performed.</description>
    <inlineHelpText>Please select the visit that most closely aligns with type of meeting performed.</inlineHelpText>
    <label>Meeting Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EBR</fullName>
            </value>
            <value>
                <fullName>QBR</fullName>
            </value>
            <value>
                <fullName>Onsite Visit</fullName>
            </value>
            <value>
                <fullName>Not performed</fullName>
            </value>
            <value>
                <fullName>Exempt/Customer Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>