objects/Account_Task__c/fields/RVP_Approved__c.field-meta.xml
<CustomField>
    <fullName>RVP_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RVP Approved</label>
    <type>Checkbox</type>
</CustomField>