objects/Account_Task__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <inlineHelpText>Sub-type values are dependent on the Type values.</inlineHelpText>
    <label>Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Growth – Partner enablement</fullName>
                <isActive>false</isActive>
                <label>Account Growth – Partner enablement</label>
            </value>
            <value>
                <fullName>Account Growth – Upsell</fullName>
                <isActive>false</isActive>
                <label>Account Growth – Upsell</label>
            </value>
            <value>
                <fullName>Conduct Executive POC Readout Meeting</fullName>
                <isActive>false</isActive>
                <label>Conduct Executive POC Readout Meeting</label>
            </value>
            <value>
                <fullName>Configure Core value components</fullName>
                <isActive>false</isActive>
                <label>Configure Core value components</label>
            </value>
            <value>
                <fullName>Create prep docs (Implement)</fullName>
                <isActive>false</isActive>
                <label>Create prep docs (Implement)</label>
            </value>
            <value>
                <fullName>Create prep documents (Onboard)</fullName>
                <isActive>false</isActive>
                <label>Create prep documents (Onboard)</label>
            </value>
            <value>
                <fullName>Deliver Executive Business Review</fullName>
            </value>
            <value>
                <fullName>Deliver Handoff Docs to Deployment Team</fullName>
                <isActive>false</isActive>
                <label>Deliver Handoff Docs to Deployment Team</label>
            </value>
            <value>
                <fullName>Deliver POC / TRA Prep Document(s)</fullName>
                <isActive>false</isActive>
                <label>Deliver POC / TRA Prep Document(s)</label>
            </value>
            <value>
                <fullName>Deliver POC / TRA Readout Document(s)</fullName>
                <isActive>false</isActive>
                <label>Deliver POC / TRA Readout Document(s)</label>
            </value>
            <value>
                <fullName>Deploy Tanium agents (target = 75%)</fullName>
                <isActive>false</isActive>
                <label>Deploy Tanium agents (target = 75%)</label>
            </value>
            <value>
                <fullName>Document business objectives</fullName>
                <isActive>false</isActive>
                <label>Document business objectives</label>
            </value>
            <value>
                <fullName>Enroll identified Tanium operators in training</fullName>
                <isActive>false</isActive>
                <label>Enroll identified Tanium operators in training</label>
            </value>
            <value>
                <fullName>Hold first status meeting</fullName>
                <isActive>false</isActive>
                <label>Hold first status meeting</label>
            </value>
            <value>
                <fullName>Hold Handoff Meeting with Deployment Team</fullName>
                <isActive>false</isActive>
                <label>Hold Handoff Meeting with Deployment Team</label>
            </value>
            <value>
                <fullName>Hold implementation kickoff meeting</fullName>
                <isActive>false</isActive>
                <label>Hold implementation kickoff meeting</label>
            </value>
            <value>
                <fullName>Hold onboarding kickoff meeting</fullName>
                <isActive>false</isActive>
                <label>Hold onboarding kickoff meeting</label>
            </value>
            <value>
                <fullName>Hold POC Kickoff Meeting</fullName>
                <isActive>false</isActive>
                <label>Hold POC Kickoff Meeting</label>
            </value>
            <value>
                <fullName>Identify Implementation Executive and/or Project Manager</fullName>
                <isActive>false</isActive>
                <label>Identify Implementation Executive and/or Project Manager</label>
            </value>
            <value>
                <fullName>Identify Tanium operators for training</fullName>
                <isActive>false</isActive>
                <label>Identify Tanium operators for training</label>
            </value>
            <value>
                <fullName>Install and configure Tanium</fullName>
                <isActive>false</isActive>
                <label>Install and configure Tanium</label>
            </value>
            <value>
                <fullName>Operationalization – &lt;Module&gt;-Use Case</fullName>
                <isActive>false</isActive>
                <label>Operationalization – &lt;Module&gt;-Use Case</label>
            </value>
            <value>
                <fullName>Operationalization – Endpoint count validation</fullName>
                <isActive>false</isActive>
                <label>Operationalization – Endpoint count validation</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Receive completed pre-implementation requirements checklist</fullName>
                <isActive>false</isActive>
                <label>Receive completed pre-implementation requirements checklist</label>
            </value>
            <value>
                <fullName>Review/Update Business Objectives</fullName>
                <isActive>false</isActive>
                <label>Review/Update Business Objectives</label>
            </value>
            <value>
                <fullName>Run TRA</fullName>
                <isActive>false</isActive>
                <label>Run TRA</label>
            </value>
            <value>
                <fullName>Run TRA to benchmark environment</fullName>
                <isActive>false</isActive>
                <label>Run TRA to benchmark environment</label>
            </value>
            <value>
                <fullName>Send implementation NPS</fullName>
                <isActive>false</isActive>
                <label>Send implementation NPS</label>
            </value>
            <value>
                <fullName>Send Onboarding NPS</fullName>
                <isActive>false</isActive>
                <label>Send Onboarding NPS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>