objects/Account_Task__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mature</fullName>
            </value>
            <value>
                <fullName>Account Growth: Upsells, Partner Enablement</fullName>
                <isActive>false</isActive>
                <label>Account Growth: Upsells, Partner Enablement</label>
            </value>
            <value>
                <fullName>Advocate</fullName>
                <isActive>false</isActive>
                <label>Advocate</label>
            </value>
            <value>
                <fullName>Buy</fullName>
                <isActive>false</isActive>
                <label>Buy</label>
            </value>
            <value>
                <fullName>CSAT / NPS</fullName>
                <isActive>false</isActive>
                <label>CSAT / NPS</label>
            </value>
            <value>
                <fullName>Churn Risk</fullName>
                <isActive>false</isActive>
                <label>Churn Risk</label>
            </value>
            <value>
                <fullName>Customer Escalation</fullName>
                <isActive>false</isActive>
                <label>Customer Escalation</label>
            </value>
            <value>
                <fullName>Customer Health</fullName>
                <isActive>false</isActive>
                <label>Customer Health</label>
            </value>
            <value>
                <fullName>Educate</fullName>
                <isActive>false</isActive>
                <label>Educate</label>
            </value>
            <value>
                <fullName>Evaluate</fullName>
                <isActive>false</isActive>
                <label>Evaluate</label>
            </value>
            <value>
                <fullName>Implement</fullName>
                <isActive>false</isActive>
                <label>Implement</label>
            </value>
            <value>
                <fullName>Onboard</fullName>
                <isActive>false</isActive>
                <label>Onboard</label>
            </value>
            <value>
                <fullName>Operationalization: Endpoint Deployment and Module Maturity</fullName>
                <isActive>false</isActive>
                <label>Operationalization: Endpoint Deployment and Module Maturity</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Sustainability: Champion building, Center of Excellence</fullName>
                <isActive>false</isActive>
                <label>Sustainability: Champion building, Center of Excellence</label>
            </value>
            <value>
                <fullName>Technical: Health and Stability</fullName>
                <isActive>false</isActive>
                <label>Technical: Health and Stability</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>