objects/Account_Task__c/recordTypes/Account_Goals.recordType-meta.xml
<RecordType>
    <fullName>Account_Goals</fullName>
    <active>false</active>
    <description>DEPRECATED - Deactivated on 05.15.2025 - Jira ticket SS-10569</description>
    <label>DEPRECATED - Account Goals</label>
</RecordType>