objects/Account_Task__c/recordTypes/Customer_Journey.recordType-meta.xml
<RecordType>
    <fullName>Customer_Journey</fullName>
    <active>true</active>
    <description>Tasks related to customer journey stages</description>
    <label>Customer Journey</label>
</RecordType>