objects/Account_Task__c/recordTypes/Support_Center_Task.recordType-meta.xml
<RecordType>
    <fullName>Support_Center_Task</fullName>
    <active>false</active>
    <description>DEPRECATED - Deactivated on 05.15.2025 - Jira ticket SS-10569</description>
    <label>DEPRECATED - Support Center Task</label>
</RecordType>