objects/Account_Task__c/recordTypes/TAM_Task.recordType-meta.xml
<RecordType>
    <fullName>TAM_Task</fullName>
    <active>false</active>
    <description>DEPRECATED - Deactivated on 05.15.2025 - Jira ticket SS-10569</description>
    <label>DEPRECATED - TAM Task</label>
</RecordType>