objects/Account_Task__c/validationRules/Account_Contact_can_not_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Contact_can_not_be_null</fullName>
    <active>true</active>
    <description>SS-1410:Account Contact can not be null</description>
    <errorConditionFormula>ISPICKVAL(Type__c,&quot;Onboard&quot;)
 &amp;&amp; 
OR(
ISPICKVAL(Sub_Type__c,&quot;Identify Implementation Executive and/or Project Manager&quot;),
ISPICKVAL(Sub_Type__c,&quot;Send Onboarding NPS&quot;))
 &amp;&amp; 
ISPICKVAL(Status__c,&quot;Completed&quot;)
&amp;&amp;
ISBLANK(Account_Contact__c)</errorConditionFormula>
    <errorMessage>Please populate the Account Contact to Complete this Task</errorMessage>
</ValidationRule>