objects/Account_Task__c/validationRules/Account_Contact_can_not_be_null2.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Contact_can_not_be_null2</fullName>
    <active>true</active>
    <description>SS-1410</description>
    <errorConditionFormula>ISPICKVAL(Type__c,&quot;Implement&quot;)
 &amp;&amp; 
ISPICKVAL(Sub_Type__c,&quot;Send Implementation NPS&quot;)
 &amp;&amp; 
ISPICKVAL(Status__c,&quot;Completed&quot;)
&amp;&amp;
ISBLANK(Account_Contact__c)</errorConditionFormula>
    <errorMessage>Account Contact can not be null</errorMessage>
</ValidationRule>