objects/Account_Task__c/validationRules/Closeout_Details_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Closeout_Details_is_Required</fullName>
    <active>true</active>
    <description>SS-1676</description>
    <errorConditionFormula>ISBLANK(Closeout_Details__c)
&amp;&amp;
OR(
RecordType.Name = &quot;TAM Task&quot;,
RecordType.Name = &quot;Support Center Task&quot;
)
&amp;&amp;
 OR(
ISPICKVAL( Status__c, &quot;Failed&quot;),
ISPICKVAL( Status__c, &quot;Completed&quot;),
ISPICKVAL( Status__c, &quot;Canceled&quot;))</errorConditionFormula>
    <errorDisplayField>Closeout_Details__c</errorDisplayField>
    <errorMessage>Closeout Details is Required!!</errorMessage>
</ValidationRule>