objects/Account_Task__c/validationRules/Customer_Enablement_MeetingDate_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Enablement_MeetingDate_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Sub_Type__c,&quot;Sustainability - Customer Enablement&quot;)
&amp;&amp;
ISPICKVAL(Status__c,&quot;Completed&quot;)
&amp;&amp;
ISBLANK(Meeting_Date__c)
)</errorConditionFormula>
    <errorDisplayField>Meeting_Date__c</errorDisplayField>
    <errorMessage>Upon completing Customer Enablement, the Meeting Date is required (if performed). Please specify the date the meeting occurred.</errorMessage>
</ValidationRule>