objects/Account_Task__c/validationRules/Onsite_Visit_Meeting_Type_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Onsite_Visit_Meeting_Type_Required</fullName>
    <active>true</active>
    <description>Upon completing Onsite Visits, the Meeting Type is required.</description>
    <errorConditionFormula>AND(ISPICKVAL(Sub_Type__c,&quot;Sustainability - Onsite Visit&quot;)
&amp;&amp;
ISPICKVAL(Status__c,&quot;Completed&quot;)
&amp;&amp;
ISPICKVAL(Meeting_Type__c,&quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>Meeting_Type__c</errorDisplayField>
    <errorMessage>Upon completing Onsite Visits, the Meeting Type is required.</errorMessage>
</ValidationRule>