objects/Account_Task__c/validationRules/Require_Account_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Account_Contact</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c,&quot;Completed&quot;),
ISBLANK(Account_Contact__c),

OR(
ISPICKVAL( Sub_Type__c , &quot;Deliver POC / TRA Readout Document(s)&quot;),
ISPICKVAL( Sub_Type__c , &quot;Deliver POC / TRA Prep Document(s)&quot;))

)</errorConditionFormula>
    <errorDisplayField>Account_Contact__c</errorDisplayField>
    <errorMessage>Please populate Account Contact</errorMessage>
</ValidationRule>