objects/Account_Task__c/validationRules/Require_Account_Contact_and_Meeting_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Account_Contact_and_Meeting_date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c,&quot;Completed&quot;),

OR(
ISBLANK(Account_Contact__c),
ISBLANK( Meeting_Date__c ) 
),

OR(
ISPICKVAL( Sub_Type__c , &quot;Hold POC Kickoff Meeting&quot;),
ISPICKVAL( Sub_Type__c , &quot;Conduct Executive POC Readout Meeting&quot;))

)</errorConditionFormula>
    <errorMessage>Please populate Account Contact and Meeting Date</errorMessage>
</ValidationRule>