objects/Account_Task__c/validationRules/Require_Meeting_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Meeting_Date</fullName>
    <active>true</active>
    <description>Upon completing Onsite Visits, the Meeting Type is required.</description>
    <errorConditionFormula>AND(ISPICKVAL(Sub_Type__c,&quot;Hold Handoff Meeting with Deployment Team&quot;)
&amp;&amp;
ISPICKVAL(Status__c,&quot;Completed&quot;)
&amp;&amp;
 ISBLANK( Meeting_Date__c ) 
)</errorConditionFormula>
    <errorDisplayField>Meeting_Date__c</errorDisplayField>
    <errorMessage>Please populate the Meeting Date.</errorMessage>
</ValidationRule>