objects/Account_Task__c/listViews/Customer_Journey.listView-meta.xml
<ListView>
    <fullName>Customer_Journey</fullName>
    <columns>NAME</columns>
    <columns>Due_Date__c</columns>
    <columns>Account__c</columns>
    <columns>Account_Contact__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Type__c</columns>
    <columns>Sub_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account_Task__c.Customer_Journey</value>
    </filters>
    <label>Customer Journey</label>
</ListView>