objects/Account_Task__c/listViews/My_TAM_Tasks_Used_to_Clone_Your_Own.listView-meta.xml
<ListView>
    <fullName>My_TAM_Tasks_Used_to_Clone_Your_Own</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Type__c</columns>
    <columns>Sub_Type__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <columns>Goal_Detail__c</columns>
    <columns>Comments__c</columns>
    <columns>Closeout_Details__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account_Task__c.TAM_Task</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Canceled,Completed,Failed</value>
    </filters>
    <filters>
        <field>Assigned_To__c</field>
        <operation>equals</operation>
        <value>Val Hetrick</value>
    </filters>
    <label>My TAM Tasks (Used to Clone Your Own)</label>
</ListView>